# true_hax0r_bot_python

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml  pytest.ini
src/bot/: __main__.py  containers.py
src/bot/i18n/: __init__.py  config.py
src/bot/middlewares/: __init__.py  database_middleware.py  logging_middleware.py
src/bot/repositories/: __init__.py  base.py  user.py
src/bot/routers/: __init__.py  routes.py  start_router.py
src/bot/services/: base.py  user.py
src/database/: __init__.py
src/database/models/: __init__.py  base.py  user.py
src/locales/en/: translation.json
src/locales/ru/: translation.json
tests/: conftest.py
tests/integration/: user_repository_test.py  user_service_test.py
