[project]
name = "true-hax0r-bot-python"
version = "0.1.0"
description = "Telegram bot"
authors = [
    {name = "SelfTopic",email = "chestor.official@gmail.com"}
]
license = {text = "MIT"}
packages = [
    { include = "src", from = "." }
]
requires-python = ">=3.13"
dependencies = [
    "aiogram (>=3.21.0,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "babel (>=2.17.0,<3.0.0)",
    "modern-i18n (>=1.0.0,<2.0.0)",
    "dependency-injector (>=4.48.1,<5.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "psycopg-c (>=3.2.9,<4.0.0)",
    "psycopg-binary (>=3.2.9,<4.0.0)",
    "pq (>=1.9.1,<2.0.0)",
    "docker (>=7.1.0,<8.0.0)",
    "anyio (>=4.9.0,<5.0.0)",
    "pytest-asyncio (>=1.1.0,<2.0.0)",
    "pytest-tornasync (>=0.6.0.post2,<0.7.0)",
    "pytest-trio (>=0.8.0,<0.9.0)",
    "pytest-twisted (>=1.14.3,<2.0.0)",
    "twisted (>=25.5.0,<26.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
